# TFLite

./: .gitignore  README.md  settings.gradle
detector/: build.gradle
detector/src/androidTest/java/com/penck/tflite/: ExampleInstrumentedTest.java
detector/src/main/: AndroidManifest.xml
detector/src/main/java/com/penck/tflite/: DetectorActivity.java
detector/src/main/res/layout/: activity_detector.xml
detector/src/main/res/values/: strings.xml
detector/src/test/java/com/penck/tflite/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
tflitelib/: build.gradle
tflitelib/src/androidTest/java/com/tflite/lib/: ExampleInstrumentedTest.java
tflitelib/src/main/: AndroidManifest.xml
tflitelib/src/main/cpp/: CMakeLists.txt  imageutils_jni.cc
tflitelib/src/main/cpp/object_tracking/: image.h  image_data.h  logging.h  object_tracker_jni.cc  utils.h
tflitelib/src/main/java/com/tflite/lib/: AutoFitTextureView.java  CameraActivity.java  Classifier.java  OverlayView.java  RecognitionScoreView.java  RecognizeCommands.java  ResultsView.java  TensorFlowMultiBoxDetector.java  TensorFlowObjectDetectionAPIModel.java  TensorFlowYoloDetector.java
tflitelib/src/main/java/com/tflite/lib/env/: BorderedText.java  ImageUtils.java  Logger.java  Size.java  SplitTimer.java
tflitelib/src/main/java/com/tflite/lib/fragment/: CameraConnectionFragment.java  LegacyCameraConnectionFragment.java
tflitelib/src/main/res/layout/: camera_connection_fragment.xml
tflitelib/src/main/res/values/: strings.xml
tflitelib/src/test/java/com/tflite/lib/: ExampleUnitTest.java
(+2 files in other folders)
